<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".SignInActivity">


        <ImageView
            android:id="@+id/icon_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/description_sign_in_icon"
            app:srcCompat="@drawable/firebase_16_logo" />

        <LinearLayout
            android:showDividers="middle"
            android:id="@+id/layout_email_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_sign_in"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"

                android:gravity="center_horizontal"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"

                android:gravity="center_horizontal"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            style="?android:buttonBarStyle"
            android:id="@+id/layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_email_password"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button

                android:id="@+id/button_sign_in"

                android:textAllCaps="false"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />


            <Button
                android:id="@+id/button_sign_up"
                android:textAllCaps="false"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

        </LinearLayout>

        <TextView
            android:id="@+id/resendVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/layout_buttons"
            android:layout_alignStart="@+id/layout_buttons"
            android:layout_below="@+id/layout_buttons"
            android:layout_marginTop="10dp"
            android:text="@string/resend_verification"
            android:textColor="@color/colorAccent"

            android:textSize="@dimen/resend_verifcation"
            android:visibility="gone" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/layout_buttons"
            android:layout_alignRight="@+id/layout_buttons"
            android:layout_below="@+id/layout_buttons"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/forgot_password" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/forgotPassword"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_sign_in_guest"
                android:textAllCaps="false"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in_guest" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>